--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.1",
+    "react-sticky-box": "^2.0.5",
     "react-use": "^17.6.0",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "virtua": "^0.41.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
